Update Azure windows iso

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,9 +7,11 @@ trigger:
 - main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
 
 steps:
+
+
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
