--- a/WebApp/react-united-airlines/package.json
+++ b/WebApp/react-united-airlines/package.json
@@ -14,6 +14,9 @@
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
+  "engines": {
+    "node": "10.14"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -38,4 +41,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
