Added error logs for WEB in config

--- a/WebApp/react-united-airlines/public/web.config
+++ b/WebApp/react-united-airlines/public/web.config
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <configuration>
+<httpErrors errorMode="Detailed"></httpErrors>
 <system.webServer>
 <rewrite>
 <rules>
@@ -14,5 +15,6 @@
 </rule>
 </rules>
 </rewrite>
+<customErrors mode="Off" />
 </system.webServer>
 </configuration>
