--- a/ManufacturerFunctionApp/ManufacturerFunctionApp.csproj
+++ b/ManufacturerFunctionApp/ManufacturerFunctionApp.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.36" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
